cmake_minimum_required(VERSION 3.24)
project(test)

set(CMAKE_CXX_STANDARD 20)

#add_executable(test main.cpp)
#add_executable(test tax.cpp)
#add_executable(test inheritance.cpp)
#add_executable(test pointers.cpp)
add_executable(test "Guessing Game.cpp")
#add_executable(test payCalculator.cpp)
#add_executable(test structures.cpp)
#add_executable(test oop.cpp)
